--- a/kardioml/models/deepecg/notebooks/3_train_model_test.ipynb
+++ b/kardioml/models/deepecg/notebooks/3_train_model_test.ipynb
@@ -18,9 +18,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Continuum\\anaconda3\\envs\\physionet-challenge-2020\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:523: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "C:\\Continuum\\anaconda3\\envs\\physionet-challenge-2020\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:524: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "C:\\Continuum\\anaconda3\\envs\\physionet-challenge-2020\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "C:\\Continuum\\anaconda3\\envs\\physionet-challenge-2020\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:526: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "C:\\Continuum\\anaconda3\\envs\\physionet-challenge-2020\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:527: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "C:\\Continuum\\anaconda3\\envs\\physionet-challenge-2020\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:532: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    }
+   ],
    "source": [
     "# 3rd party libraries\n",
     "import os\n",
@@ -52,11 +71,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Workstation has 1 CPUs.\n",
+      "Workstation has 2 GPUs.\n",
+      "input | shape = (?, 21000, 13)\n",
+      "stem_layer_1 | shape = (?, 10500, 32)\n",
+      "stem_layer_2 | shape = (?, 5250, 64)\n",
+      "res_layer_1_skip | shape = (?, 5250, 64)\n",
+      "res_layer_2_skip | shape = (?, 5250, 64)\n",
+      "res_layer_3_skip | shape = (?, 5250, 64)\n",
+      "res_layer_4_skip | shape = (?, 5250, 64)\n",
+      "res_layer_5_skip | shape = (?, 5250, 64)\n",
+      "res_layer_6_skip | shape = (?, 5250, 64)\n",
+      "res_layer_7_skip | shape = (?, 5250, 64)\n",
+      "res_layer_8_skip | shape = (?, 5250, 64)\n",
+      "output_skip_addition | shape = (?, 5250, 64)\n",
+      "output_conv1 | shape = (?, 5250, 128)\n",
+      "output_conv2 | shape = (?, 5250, 256)\n",
+      "gap | shape = (?, 256)\n",
+      "logits | shape = (?, 27)\n",
+      "input | shape = (?, 21000, 13)\n",
+      "stem_layer_1 | shape = (?, 10500, 32)\n",
+      "stem_layer_2 | shape = (?, 5250, 64)\n",
+      "res_layer_1_skip | shape = (?, 5250, 64)\n",
+      "res_layer_2_skip | shape = (?, 5250, 64)\n",
+      "res_layer_3_skip | shape = (?, 5250, 64)\n",
+      "res_layer_4_skip | shape = (?, 5250, 64)\n",
+      "res_layer_5_skip | shape = (?, 5250, 64)\n",
+      "res_layer_6_skip | shape = (?, 5250, 64)\n",
+      "res_layer_7_skip | shape = (?, 5250, 64)\n",
+      "res_layer_8_skip | shape = (?, 5250, 64)\n",
+      "output_skip_addition | shape = (?, 5250, 64)\n",
+      "output_conv1 | shape = (?, 5250, 128)\n",
+      "output_conv2 | shape = (?, 5250, 256)\n",
+      "gap | shape = (?, 256)\n",
+      "logits | shape = (?, 27)\n"
+     ]
+    }
+   ],
    "source": [
     "# Print devices\n",
     "print_device_counts()\n",
@@ -68,7 +128,7 @@
     "duration = 60\n",
     "\n",
     "# Set model name\n",
-    "model_name = '1'\n",
+    "model_name = '17'\n",
     "\n",
     "# Maximum number of checkpoints to keep\n",
     "max_to_keep = 1\n",
@@ -83,7 +143,7 @@
     "lookup_path = os.path.join(DATA_PATH, 'training', 'deepecg', 'single_split', str(fs))\n",
     "\n",
     "# Get training dataset dimensions\n",
-    "length, channels = (int(duration * fs), NUM_LEADS)          \n",
+    "length, channels = (int(duration * fs), NUM_LEADS+1)          \n",
     "\n",
     "# Number of classes\n",
     "classes = LABELS_COUNT\n",
@@ -118,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -150,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
