--- a/notebooks/2_visualize_formatted_data.ipynb
+++ b/notebooks/2_visualize_formatted_data.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -55,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "231911c807a842398a5b6a521d84ee4a",
+       "model_id": "aebcfd6908324e298e5ef4f190dc871f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,6 +80,13 @@
     "# Launch interactive plotter\n",
     "waveform_plot_interact(dataset='F')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -89,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
