--- a/kardioml/models/deepecg/notebooks/0_resampling.ipynb
+++ b/kardioml/models/deepecg/notebooks/0_resampling.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +41,7 @@
     "import pandas as pd\n",
     "from scipy import signal\n",
     "from joblib import Parallel, delayed\n",
+    "from scipy.signal.windows import blackmanharris\n",
     "\n",
     "# Import local Libraries\n",
     "sys.path.insert(0, os.path.dirname(os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(os.getcwd()))))))\n",
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,10 +72,21 @@
     "    \n",
     "    # Rescale\n",
     "    waveform = scale_waveforms(waveform=waveform, rpeaks=meta_data['rpeaks'])\n",
-    "\n",
+    "    \n",
     "    # Resample waveform\n",
     "    samples = int(waveform.shape[0] * fs / meta_data['fs_resampled'])\n",
     "    waveform = signal.resample(x=waveform, num=samples, axis=0)\n",
+    "    \n",
+    "    # Get peak arrays\n",
+    "    rpeak_array = create_peak_array(waveform=waveform, peaks=meta_data['rpeaks'], fs_old=meta_data['fs_resampled'], fs_new=fs)\n",
+    "    p_wave_array = create_peak_array(waveform=waveform, peaks=meta_data['p_waves'], fs_old=meta_data['fs_resampled'], fs_new=fs)\n",
+    "    t_wave_array = create_peak_array(waveform=waveform, peaks=meta_data['t_waves'], fs_old=meta_data['fs_resampled'], fs_new=fs)\n",
+    "\n",
+    "    # Add R, P, and T waves\n",
+    "    features = np.concatenate([rpeak_array.reshape([-1, 1])], axis=1)\n",
+    "#                                p_wave_array.reshape([-1, 1]), \n",
+    "#                                t_wave_array.reshape([-1, 1])], axis=1)\n",
+    "    waveform = np.append(waveform, features, axis=1)\n",
     "    \n",
     "    # Save meta data\n",
     "    with open(os.path.join(path, str(fs), '{}.json'.format(filename)), 'w') as file:\n",
@@ -89,12 +101,28 @@
     "        for rpeak_array in rpeaks:\n",
     "            if rpeak_array:\n",
     "                return waveform / np.median(waveform[rpeaks[0], 0])\n",
-    "    return (waveform - waveform.mean()) / waveform.std()"
+    "    return (waveform - waveform.mean()) / waveform.std()\n",
+    "\n",
+    "def create_peak_array(waveform, peaks, fs_old, fs_new):\n",
+    "    \"\"\"Return a binary array of contiguous peak sections.\"\"\"\n",
+    "    peak_array = np.zeros(waveform.shape[0], dtype=np.float32)\n",
+    "    window = blackmanharris(21)\n",
+    "    if peaks:\n",
+    "        for peak_ids in peaks:\n",
+    "            if peak_ids:\n",
+    "                for peak_id in peak_ids:\n",
+    "                    peak_time = peak_id / fs_old\n",
+    "                    peak_id_new = int(peak_time * fs_new)\n",
+    "                    if len(peak_array[peak_id_new - 10:peak_id_new + 11]) >= 21:\n",
+    "                        peak_array[peak_id_new-10:peak_id_new+11] += window\n",
+    "        peak_array[peak_array <= 1] = 0\n",
+    "        peak_array /= np.max(peak_array)\n",
+    "    return peak_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +149,155 @@
     "        _ = Parallel(n_jobs=-1)(delayed(process_signal)(os.path.join(DATA_PATH, dataset), filename, fs) \n",
     "                                for filename in filenames)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs = 350\n",
+    "\n",
+    "# Import meta data\n",
+    "meta_data = json.load(open(r'C:\\Users\\sebastian goodfellow\\Documents\\code\\physionet-challenge-2020\\data\\A\\formatted\\A0001.json'))\n",
+    "meta_data['fs_training'] = fs\n",
+    "\n",
+    "# Import waveform\n",
+    "waveform = np.load(r'C:\\Users\\sebastian goodfellow\\Documents\\code\\physionet-challenge-2020\\data\\A\\formatted\\A0001.npy')\n",
+    "\n",
+    "# Rescale\n",
+    "waveform = scale_waveforms(waveform=waveform, rpeaks=meta_data['rpeaks'])\n",
+    "\n",
+    "# Resample waveform\n",
+    "samples = int(waveform.shape[0] * fs / meta_data['fs_resampled'])\n",
+    "waveform = signal.resample(x=waveform, num=samples, axis=0)\n",
+    "\n",
+    "# Get peak arrays\n",
+    "rpeak_array = create_peak_array(waveforms=waveform, peaks=meta_data['rpeaks'], \n",
+    "                                fs_old=meta_data['fs_resampled'], fs_new=fs)\n",
+    "p_wave_array = create_peak_array(waveforms=waveform, peaks=meta_data['p_waves'], \n",
+    "                                fs_old=meta_data['fs_resampled'], fs_new=fs)\n",
+    "t_wave_array = create_peak_array(waveforms=waveform, peaks=meta_data['t_waves'], \n",
+    "                                fs_old=meta_data['fs_resampled'], fs_new=fs)\n",
+    "\n",
+    "# Add R, P, and T waves\n",
+    "features = np.concatenate([rpeak_array.reshape([-1, 1])], axis=1)\n",
+    "#                            p_wave_array.reshape([-1, 1]), \n",
+    "#                            t_wave_array.reshape([-1, 1])], axis=1)\n",
+    "waveform = np.append(waveform, features, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pylab as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(15, 5), facecolor='w')\n",
+    "plt.plot(waveform[:, 10], '-k')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(15, 5), facecolor='w')\n",
+    "plt.plot(waveform[:, 14], '-k')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import meta data\n",
+    "meta_data = json.load(open(r'C:\\Users\\sebastian goodfellow\\Documents\\code\\physionet-challenge-2020\\data\\A\\350\\A0001.json'))\n",
+    "\n",
+    "# Import waveform\n",
+    "waveform = np.load(r'C:\\Users\\sebastian goodfellow\\Documents\\code\\physionet-challenge-2020\\data\\A\\350\\A0001.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(15, 5), facecolor='w')\n",
+    "plt.plot(waveform[:, 0], '-k')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(15, 5), facecolor='w')\n",
+    "plt.plot(waveform[:, 11], '-k')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "waveform.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "60*350"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -139,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
