added max-based weights

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASETS = ['A','B','C','D','E','F']\n",
-    "#DATASETS = ['C']\n",
+    "#DATASETS = ['A','B','C','D','E','F']\n",
+    "DATASETS = ['A']\n",
     "datalist = []\n",
     "\n",
     "for dataset in DATASETS:\n",
@@ -128,397 +128,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['A6181',\n",
-       " 'A5177',\n",
-       " 'A4739',\n",
-       " 'A6480',\n",
-       " 'A1670',\n",
-       " 'A2404',\n",
-       " 'A6831',\n",
-       " 'A0017',\n",
-       " 'A0750',\n",
-       " 'A2922',\n",
-       " 'A0815',\n",
-       " 'A0166',\n",
-       " 'A5285',\n",
-       " 'A1395',\n",
-       " 'A2256',\n",
-       " 'A6716',\n",
-       " 'A3546',\n",
-       " 'A5601',\n",
-       " 'A2289',\n",
-       " 'A2732',\n",
-       " 'A2482',\n",
-       " 'A4982',\n",
-       " 'A2425',\n",
-       " 'A6696',\n",
-       " 'A4756',\n",
-       " 'A0631',\n",
-       " 'A4738',\n",
-       " 'A4263',\n",
-       " 'A6216',\n",
-       " 'A6832',\n",
-       " 'A3536',\n",
-       " 'A3872',\n",
-       " 'A4218',\n",
-       " 'A5356',\n",
-       " 'A6633',\n",
-       " 'A0769',\n",
-       " 'A5618',\n",
-       " 'A2006',\n",
-       " 'A6815',\n",
-       " 'A3871',\n",
-       " 'A1579',\n",
-       " 'A2396',\n",
-       " 'A0113',\n",
-       " 'A6558',\n",
-       " 'A1332',\n",
-       " 'A0713',\n",
-       " 'A3183',\n",
-       " 'A4499',\n",
-       " 'A0080',\n",
-       " 'A4404',\n",
-       " 'A1988',\n",
-       " 'A4216',\n",
-       " 'A4318',\n",
-       " 'A1237',\n",
-       " 'A3069',\n",
-       " 'A6875',\n",
-       " 'A4552',\n",
-       " 'A0290',\n",
-       " 'A5911',\n",
-       " 'A1340',\n",
-       " 'A0649',\n",
-       " 'A3605',\n",
-       " 'A5878',\n",
-       " 'A4549',\n",
-       " 'A3087',\n",
-       " 'A5189',\n",
-       " 'A5037',\n",
-       " 'A2221',\n",
-       " 'A3985',\n",
-       " 'A5841',\n",
-       " 'A0551',\n",
-       " 'A0661',\n",
-       " 'A0145',\n",
-       " 'A2593',\n",
-       " 'A4004',\n",
-       " 'A6505',\n",
-       " 'A4652',\n",
-       " 'A5042',\n",
-       " 'A1374',\n",
-       " 'A6850',\n",
-       " 'A0441',\n",
-       " 'A4972',\n",
-       " 'A1073',\n",
-       " 'A4698',\n",
-       " 'A5488',\n",
-       " 'A4342',\n",
-       " 'A2935',\n",
-       " 'A2020',\n",
-       " 'A3170',\n",
-       " 'A0445',\n",
-       " 'A1462',\n",
-       " 'A3943',\n",
-       " 'A4315',\n",
-       " 'A0582',\n",
-       " 'A0069',\n",
-       " 'A2681',\n",
-       " 'A3025',\n",
-       " 'A3842',\n",
-       " 'A0529',\n",
-       " 'A3614',\n",
-       " 'A3314',\n",
-       " 'A6120',\n",
-       " 'A5169',\n",
-       " 'A6015',\n",
-       " 'A5331',\n",
-       " 'A2933',\n",
-       " 'A4286',\n",
-       " 'A3897',\n",
-       " 'A0848',\n",
-       " 'A0173',\n",
-       " 'A5464',\n",
-       " 'A0313',\n",
-       " 'A5347',\n",
-       " 'A4727',\n",
-       " 'A6238',\n",
-       " 'A6738',\n",
-       " 'A0018',\n",
-       " 'A2134',\n",
-       " 'A4512',\n",
-       " 'A3975',\n",
-       " 'A6429',\n",
-       " 'A5164',\n",
-       " 'A4790',\n",
-       " 'A1786',\n",
-       " 'A6290',\n",
-       " 'A1372',\n",
-       " 'A1389',\n",
-       " 'A1663',\n",
-       " 'A2743',\n",
-       " 'A1258',\n",
-       " 'A1267',\n",
-       " 'A2834',\n",
-       " 'A6099',\n",
-       " 'A4170',\n",
-       " 'A2225',\n",
-       " 'A4550',\n",
-       " 'A3561',\n",
-       " 'A4672',\n",
-       " 'A3433',\n",
-       " 'A0739',\n",
-       " 'A0055',\n",
-       " 'A3898',\n",
-       " 'A6421',\n",
-       " 'A3203',\n",
-       " 'A3066',\n",
-       " 'A1211',\n",
-       " 'A4016',\n",
-       " 'A0639',\n",
-       " 'A4685',\n",
-       " 'A6857',\n",
-       " 'A6007',\n",
-       " 'A4949',\n",
-       " 'A2529',\n",
-       " 'A6071',\n",
-       " 'A1263',\n",
-       " 'A4560',\n",
-       " 'A4119',\n",
-       " 'A5733',\n",
-       " 'A2502',\n",
-       " 'A1986',\n",
-       " 'A4996',\n",
-       " 'A5477',\n",
-       " 'A1990',\n",
-       " 'A4654',\n",
-       " 'A0865',\n",
-       " 'A2926',\n",
-       " 'A5094',\n",
-       " 'A3268',\n",
-       " 'A3666',\n",
-       " 'A6306',\n",
-       " 'A5412',\n",
-       " 'A4619',\n",
-       " 'A3172',\n",
-       " 'A0183',\n",
-       " 'A4080',\n",
-       " 'Q1325',\n",
-       " 'Q2610',\n",
-       " 'Q2866',\n",
-       " 'Q0423',\n",
-       " 'Q2949',\n",
-       " 'Q2790',\n",
-       " 'Q2811',\n",
-       " 'Q1510',\n",
-       " 'Q0549',\n",
-       " 'Q3075',\n",
-       " 'Q1691',\n",
-       " 'Q3250',\n",
-       " 'Q3279',\n",
-       " 'Q2357',\n",
-       " 'Q0312',\n",
-       " 'Q2534',\n",
-       " 'Q0830',\n",
-       " 'Q0619',\n",
-       " 'Q3040',\n",
-       " 'Q0510',\n",
-       " 'Q3266',\n",
-       " 'Q2292',\n",
-       " 'Q2888',\n",
-       " 'Q0335',\n",
-       " 'Q1017',\n",
-       " 'Q2323',\n",
-       " 'Q3559',\n",
-       " 'Q3391',\n",
-       " 'Q3496',\n",
-       " 'Q1424',\n",
-       " 'Q1379',\n",
-       " 'Q1847',\n",
-       " 'Q2822',\n",
-       " 'Q0017',\n",
-       " 'Q0329',\n",
-       " 'Q2717',\n",
-       " 'Q2215',\n",
-       " 'Q1695',\n",
-       " 'Q1217',\n",
-       " 'Q1196',\n",
-       " 'Q3396',\n",
-       " 'Q1894',\n",
-       " 'Q0134',\n",
-       " 'Q0859',\n",
-       " 'Q2177',\n",
-       " 'Q3567',\n",
-       " 'Q2979',\n",
-       " 'Q0060',\n",
-       " 'Q1083',\n",
-       " 'Q2535',\n",
-       " 'Q0257',\n",
-       " 'Q0357',\n",
-       " 'Q1152',\n",
-       " 'Q0995',\n",
-       " 'Q1734',\n",
-       " 'Q1367',\n",
-       " 'Q2570',\n",
-       " 'Q2716',\n",
-       " 'Q0386',\n",
-       " 'Q3188',\n",
-       " 'Q0151',\n",
-       " 'Q0039',\n",
-       " 'Q3343',\n",
-       " 'Q0343',\n",
-       " 'Q1671',\n",
-       " 'Q2045',\n",
-       " 'Q0022',\n",
-       " 'I0038',\n",
-       " 'I0010',\n",
-       " 'I0065',\n",
-       " 'I0058',\n",
-       " 'I0057',\n",
-       " 'I0037',\n",
-       " 'I0034',\n",
-       " 'I0074',\n",
-       " 'I0073',\n",
-       " 'I0067',\n",
-       " 'I0035',\n",
-       " 'I0033',\n",
-       " 'I0016',\n",
-       " 'I0023',\n",
-       " 'I0052',\n",
-       " 'I0046',\n",
-       " 'I0021',\n",
-       " 'I0050',\n",
-       " 'I0020',\n",
-       " 'I0028',\n",
-       " 'I0051',\n",
-       " 'I0039',\n",
-       " 'I0072',\n",
-       " 'I0049',\n",
-       " 'I0061',\n",
-       " 'I0070',\n",
-       " 'I0022',\n",
-       " 'I0075',\n",
-       " 'I0017',\n",
-       " 'I0069',\n",
-       " 'I0064',\n",
-       " 'I0041',\n",
-       " 'I0047',\n",
-       " 'S0380',\n",
-       " 'S0427',\n",
-       " 'S0330',\n",
-       " 'S0400',\n",
-       " 'S0483',\n",
-       " 'S0521',\n",
-       " 'S0409',\n",
-       " 'S0487',\n",
-       " 'S0505',\n",
-       " 'S0477',\n",
-       " 'S0527',\n",
-       " 'S0485',\n",
-       " 'S0484',\n",
-       " 'S0522',\n",
-       " 'S0392',\n",
-       " 'S0453',\n",
-       " 'S0508',\n",
-       " 'S0499',\n",
-       " 'S0318',\n",
-       " 'S0317',\n",
-       " 'S0490',\n",
-       " 'S0432',\n",
-       " 'S0388',\n",
-       " 'S0495',\n",
-       " 'S0336',\n",
-       " 'S0533',\n",
-       " 'S0536',\n",
-       " 'S0385',\n",
-       " 'S0337',\n",
-       " 'S0331',\n",
-       " 'S0346',\n",
-       " 'S0475',\n",
-       " 'S0479',\n",
-       " 'S0535',\n",
-       " 'S0473',\n",
-       " 'S0528',\n",
-       " 'S0458',\n",
-       " 'S0381',\n",
-       " 'S0405',\n",
-       " 'S0472',\n",
-       " 'S0411',\n",
-       " 'S0486',\n",
-       " 'S0468',\n",
-       " 'S0364',\n",
-       " 'S0481',\n",
-       " 'S0404',\n",
-       " 'S0390',\n",
-       " 'S0469',\n",
-       " 'S0498',\n",
-       " 'S0496',\n",
-       " 'S0401',\n",
-       " 'S0491',\n",
-       " 'S0327',\n",
-       " 'S0326',\n",
-       " 'S0414',\n",
-       " 'S0391',\n",
-       " 'S0369',\n",
-       " 'S0402',\n",
-       " 'S0393',\n",
-       " 'S0403',\n",
-       " 'S0494',\n",
-       " 'S0488',\n",
-       " 'S0482',\n",
-       " 'S0370',\n",
-       " 'S0509',\n",
-       " 'S0431',\n",
-       " 'S0526',\n",
-       " 'S0471',\n",
-       " 'S0387',\n",
-       " 'S0386',\n",
-       " 'S0476',\n",
-       " 'S0497',\n",
-       " 'S0394',\n",
-       " 'S0529',\n",
-       " 'S0406',\n",
-       " 'S0463',\n",
-       " 'S0500',\n",
-       " 'S0480',\n",
-       " 'S0489',\n",
-       " 'S0371',\n",
-       " 'S0478',\n",
-       " 'S0538',\n",
-       " 'S0470',\n",
-       " 'S0332',\n",
-       " 'S0447',\n",
-       " 'S0367',\n",
-       " 'S0511',\n",
-       " 'S0382',\n",
-       " 'S0412',\n",
-       " 'S0474',\n",
-       " 'S0384',\n",
-       " 'S0534',\n",
-       " 'S0502',\n",
-       " 'S0365',\n",
-       " 'S0512',\n",
-       " 'S0464',\n",
-       " 'S0428']"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "exclusions"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
@@ -571,23 +180,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check distribution of classes, calculate weights"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6877/6877 [00:38<00:00, 179.30it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "labels = []\n",
+    "\n",
+    "for data in tqdm(datalist):\n",
+    "    meta = json.load(open(data+'.json'))\n",
+    "    if meta['shape'][0] > 38000:\n",
+    "        continue\n",
+    "    elif meta['labels_training_merged'] is None:\n",
+    "        continue\n",
+    "    else:\n",
+    "        labels.append(meta['labels_training_merged'])\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "labels = np.array(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "37749"
+       "[0.13184772516248838,\n",
+       " 0.21875580315691737,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.33593314763231197,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.04271123491179202,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.10306406685236769,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.16768802228412255,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(length_list)"
+    "weights = np.sum(labels,axis=0)\n",
+    "weights = weights / np.sum(weights)\n",
+    "weights.tolist()"
    ]
   },
   {
