reshed the ecgnet architecture

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -188,14 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 69%|██████▊   | 22414/32683 [02:04<00:37, 273.69it/s]"
+      "100%|██████████| 32683/32683 [02:43<00:00, 200.26it/s]\n"
      ]
     }
    ],
@@ -218,12 +218,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dmitriishubin/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/ipykernel_launcher.py:3: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[11.793296089385475,\n",
+       " 6.692145121521662,\n",
+       " 155.72950819672133,\n",
+       " 74.21484375,\n",
+       " 7.72003250711093,\n",
+       " 15.858931552587647,\n",
+       " 11.68450184501845,\n",
+       " 3.6919937815779247,\n",
+       " 23.66002490660025,\n",
+       " 104.39010989010988,\n",
+       " 23.958385876418664,\n",
+       " 63.54180602006689,\n",
+       " 15.611339359079702,\n",
+       " 107.33898305084746,\n",
+       " 55.87941176470588,\n",
+       " 155.72950819672133,\n",
+       " 34.60655737704918,\n",
+       " 55.229651162790695,\n",
+       " inf,\n",
+       " 24.295396419437342,\n",
+       " 27.980854197349043,\n",
+       " 1.0,\n",
+       " 17.008952551477172,\n",
+       " inf,\n",
+       " 8.02661596958175,\n",
+       " 63.54180602006689,\n",
+       " inf]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "weights = np.sum(labels,axis=0)\n",
-    "weights = weights / np.max(weights)\n",
+    "weights = weights/np.max(weights)\n",
+    "weights = 1/weights\n",
+    "weights\n",
+    "#weights = weights/np.max(weights)\n",
     "weights.tolist()"
    ]
   },
